@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: curl.1,v 1.245 2008-03-13 20:49:06 danf Exp $
+.\" * $Id: curl.1,v 1.246 2008-04-30 21:20:09 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH curl 1 "5 Jan 2008" "Curl 7.18.0" "Curl Manual"
@@ -1288,7 +1288,9 @@ The URL that was fetched last. This is mostly meaningful if you've told curl
 to follow location: headers.
 .TP
 .B http_code
-The numerical code that was found in the last retrieved HTTP(S) page.
+The numerical response code that was found in the last retrieved HTTP(S) or
+FTP(s) transfer. In 7.18.2 the alias \fBresponse_code\fP was added to show the
+same info.
 .TP
 .B http_connect
 The numerical code that was found in the last response (from a proxy) to a
@@ -1348,6 +1350,10 @@ Number of new connects made in the recent transfer. (Added in 7.12.3)
 .TP
 .B num_redirects
 Number of redirects that were followed in the request. (Added in 7.12.3)
+.TP
+.B redirect_url
+When a HTTP request was made without -L to follow redirects, this variable
+will show the actual URL a redirect \fIwould\fP take you to. (Added in 7.18.2)
 .TP
 .B ftp_entry_path
 The initial path libcurl ended up in when logging on to the remote FTP
